force-app/main/default/objects/large_metadata__c/large_metadata__c.object-meta.xml
<CustomObject>
    <label>large metadata</label>
    <nameField>
        <displayFormat>LMD-{000000}</displayFormat>
        <label>large metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>large metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>