force-app/main/default/objects/large_metadata__c/fields/Text_Field101__c.field-meta.xml
<CustomField>
    <fullName>Text_Field101__c</fullName>
    <label>Text_Field101</label>
    <length>255</length>
    <type>Text</type>
</CustomField>