force-app/main/default/objects/large_metadata__c/fields/Text_Field102__c.field-meta.xml
<CustomField>
    <fullName>Text_Field102__c</fullName>
    <label>Text_Field102</label>
    <length>255</length>
    <type>Text</type>
</CustomField>